[package]
name = "brug-example"
version = "0.1.0"
edition = "2021"
license = "MIT"

# no reason to publish the example package
publish = false

[dependencies]
brug = { version = "0.2", features = ["macros", "tokio", "kanal"], path = "../brug" }
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread"] }